# opensource-tts-research

./: .gitignore  README.md  app.py  preload_models.py  pyproject.toml  requirements.txt  voices.py
templates/: index.html
