[project]
name = "opensource-tts-research"
version = "0.1.0"
description = "Local web app to compare popular open-source TTS engines and voices"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask==3.1.0",
  "tts==0.22.0",
  "piper-tts==1.4.1",
  "pathvalidate==3.3.1",
]

[tool.uv]
package = false
